# Modbus-tcp

./: .gitignore  CMakeLists.txt  main_modbus.vgdbcmake
cmake/: Linux.cmake
db/: db.xml  xml.c  xml.h
include/: mb_slave.h  mb_tcp.h
libs/: CMakeLists.txt
main/: slave.c  slave.h  tcp_master.c  tcp_rtu_master.c
src/: CMakeLists.txt  mb_slave.c  mbal_rtu.h
src/ports/linux/: tcp_rtu_master.c
